[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game State/RunManager/LootManager/LootManager.gd" type="Script" id=1]
[ext_resource path="res://Game State/RunManager/LootManager/Weapons.gd" type="Script" id=2]
[ext_resource path="res://Game State/RunManager/LootManager/Flasks.gd" type="Script" id=3]
[ext_resource path="res://Game State/RunManager/LootManager/RunCurrency.gd" type="Script" id=4]
[ext_resource path="res://Game State/RunManager/LootManager/PermaCurrency.gd" type="Script" id=5]
[ext_resource path="res://Game State/RunManager/LootManager/Powerups.gd" type="Script" id=6]
[ext_resource path="res://Game State/RunManager/LootManager/PowerupUpgrades.gd" type="Script" id=7]
[ext_resource path="res://Game State/RunManager/LootManager/RangedWeapons.gd" type="Script" id=8]

[node name="LootManager" type="Node"]
script = ExtResource( 1 )
RARITY_APPLIES = true

[node name="MeleeWeapons" type="Node" parent="."]
script = ExtResource( 2 )

[node name="RangedWeapons" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Flasks" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Coins" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Gems" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Powerups" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PowerupUpgrades" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="populated_arrays" from="Flasks" to="Flasks" method="_on_Flasks_populated_arrays"]
[connection signal="populated_arrays" from="Powerups" to="Powerups" method="_on_Powerups_populated_arrays"]
